public/assets/css/style.css
/* ... */
.item-thumb img {
  max-height: 94%;
  max-width: 94%;
}

/* End collection grid section */

/* Begin search results */
div#daterange-window {
  overflow-y: initial;
  padding: 20px 17px;
}

form#daterange-form {
  /*display: inline-flex;*/
  width: 100%;
}

form#daterange-form input:not(.daterange-slider) {
  max-width: 30%;
  font-size: 1em;
}

form#daterange-form #slider {
  width: 91%;
  margin-left: 1vw;
}

form#daterange-form #slider span {
  background-color: #0e90d2;
  border-radius: 15px;
}

input.daterange-slider {
  width: 80%;
}

form#daterange-form label {
  font-size: 0.9em;
}

form#daterange-form button {
  font-size: 14px;
  margin-top: 10px;
}

.results-display {
  margin-top: 60px;
  display: flex;
}

div.results-display h4 {
  font-size: 1.2em;
  font-weight: bold;
  margin-top: 0;
  margin-bottom: 0;
}

div.search-results-menu > div {
  display: inline-block;
}

div.search-results-menu-element {
  margin-left: 20px;
  margin-top: 10px;
  display: inline-block;
}

div#search-results-wrapper h4 {
  margin-top: 0;
}

div#search-results-wrapper h4 span {
  font-weight: normal;
  margin-left: 15px;
  font-size: 16px;
}

div.search-results-list {
  margin-top: 30px;
}

div.search-results-list > h3 {
  font-size: 1.23em;
}

div.search-results-list div.search-result:not(:first-child) {
  margin-top: 45px;
}

div.search-result {
/*  display: inline-block;*/
  margin-bottom: 0;
/*  width: 85%;*/
  margin-bottom: 20px;
}

dl.item > dt {
  overflow: hidden;
}

dl.search-result-data {
/*  float: left;
  width: 90%;*/
  border-bottom-style: solid;
  border-width: 2px;
  border-color: #c5c3c1;
  padding-top: 1em;
  overflow: hidden;
  min-height: 225px;
}

div.search-result-tn {
  border-radius: 5px;
  width: 200px;
  height: 200px;
  margin: 0 auto;
}

div.search-result-tn a img {
  margin-bottom: 13%;
  border-radius: 7px;
  max-width: 100%;
  max-height: 100%;
}

div.search-result-data {
  padding: 0;
  font-size: 1em;
}

div.search-result-data p {
  margin-left: 6px;
}

div.search-result-data dt:not(.result-title) {
  margin-left: 5px;
}

div.search-result-data dd {
  margin-left: 10px;
  padding-top: 10px;
  line-height: 1.28em;
}

dt.result-title,
dt.result-title a {
  color: black;
  font-size: 1em;
  line-height: 25px;
  text-decoration: underline;
}
/* End search results */

/* Begin object data section */
div#metadata-section > .container {
  padding-top: 40px;
}

table.data-table {
 /* padding: 10px;*/
  width: 100%;
  border-style: solid;
  border-width: 1px;
  border-radius: 5px;
  border-collapse: separate;
  border-spacing: 0px
}

table.data-table td {
  padding: 15px;
/*  border-bottom-style: solid;
  border-bottom-color: #e5e3e1;
  border-bottom-width: 1px;*/
}

table.data-table td:first-child {
  border-right-style: solid;
  border-right-color: #e5e3e1;
  border-right-width: 1px;
  width: 20%;
}

table.data-table tr:first-child td {
  border-top-style: none;
}

table.data-table td p {
  margin-bottom: 0;
}

table.data-table a,
table.data-table a:visited {
  /*color: #181818;*/
}

div.object-data h3 {
  font-size: 1.5em;
  margin: 25px 0;
  /*color: #181818;*/
}

div.object-data p {
  color: #656361;
  font-size: 1.08em;
}

div.object-options {
  background-color: #585858;
  padding: 20px 0 20px 0;
  min-height: 80px;
}

div.object-options span {
  margin-left: 0;
}

div.object-options button {
  background-color: white;
  border-style: solid;
  font-family: inherit;
  padding: 10px;
  margin-right: 10px;
  color: #353331;
}

div.object-options button:hover {
  cursor: pointer;
  background-color: #e5e3e1;
}

div.object-options button:focus {
  outline: none;
}

div.download-links {
  margin-top: 30px;
}

div.download-links a {
  font-size: 0.9em;
}

.disabledbutton {
  pointer-events: none;
  opacity: 0.4;
}

div.object-citations {

}

.citation h5 {
  font-size: 1rem;
}

.citation p {
  font-size: 0.9em;
}

.citation:not(:first-child) {
  margin-top: 40px;
}

.citation p {
  padding: 0 5px;
}

div.mods-display {
  margin-bottom: 75px;
  margin-top: 25px;
  background: #fff;
  transition: opacity 600ms, visibility 600ms;
}

div.metadata-content {
  padding: 0;
  overflow: hidden;
}

.metadata-in-text-link,
a.metadata-in-text-link:not([href]):not([tabindex]) {
  color: blue;
  text-decoration: underline;
}
/* End object data section */

.kaltura-viewer h3 {
  margin-bottom: 15px;
}

div#transcript-view-wrapper {
  padding-bottom: 1.5em;
  background: white;
  width: 100%;
}

div#transcript-view {
  padding: 20px;
  background: white;
  width: 100%;
  margin-top: 20px;
  overflow-y: scroll;
  max-height: 300px;
  text-align: left;
  line-height: 1.5em;
}

.info-content {
  padding-top: 4.1em;
}

.info-content h2 {
  margin-bottom: 0.7em;
}

.info-content ul li {
  margin-bottom: 0.7em;
  line-height: 1.4em;
}

.info-content dl dt {
  margin-top: 2em;
  margin-bottom: 0.9em;
  font-weight: 500;
}

.info-content dl dd {
  margin-bottom: .8rem;
}

.info-content p {
  line-height: 1.4em;
}

footer {
  background: #8b2332;
  /* height: 230px; [C22] */
  padding: 50px 0 25px 0;
  overflow: hidden;
  /*position: absolute;
  bottom: 0;*/
  width: 100%;
}

.footer-wrapper {
  margin-left: 12vw;
}

footer div#footer-links {
  margin: 0 1em 0 1em;
}

footer a,
footer ul,
.footer-link-list label  {
  color: #e5e3e1;
  text-decoration: none;
}

footer ul {
  padding-left: 0;
}

footer a {
  font-weight: normal;
}

footer label {
  font-weight: bold;
  text-transform: uppercase;
  margin-left: 0px;
}

footer .footer-column {
  background-color: inherit;
}

.footer-link-list {
  width: 95%;
  margin: 0 auto;
}

.footer-link-list ul li {
  padding: 7px 0;
}

